# SimpleTensor

./: .buildinfo  .gitignore  LICENSE  README.md  about.html  demo.html  docs.html  genindex.html  index.html  installation.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: about.doctree  demo.doctree  docs.doctree  environment.pickle  index.doctree  installation.doctree  overview.doctree
.github/workflows/: sphinx.yml
_sources/: about.rst.txt  docs.rst.txt  index.rst.txt  installation.rst.txt
docs/source/: about.rst  conf.py  demo.rst  index.rst  overview.ipynb
src/simpletensor/: __init__.py  array_backend.py  functions.py  grad_manager.py  mnist_train.py  operation.py  tensor.py
src/simpletensor/array_api/: __init__.py  _types.py  array_object.py  creation_functions.py  data_type_functions.py  data_types.py  elementwise_functions.py  fft.py  indexing_functions.py  info.py  linalg.py  linear_algebra_functions.py  manipulation_functions.py  searching_functions.py  set_functions.py  sorting_functions.py  statistical_functions.py  utility_functions.py
