[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simpletensor"
version = "0.0.1"
authors = [
    { name = "Vikram Rangarajan", email = "vikram.rangaraja@gmail.com" },
    { name = "Ved Karamsetty", email = "vkarams@terpmail.umd.edu" },
]
description = "Simple Tensor Package with Automatic Differentiation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["numpy>=1.19", "scipy>=1.9.0"]

[project.optional-dependencies]
showcase = ["matplotlib", "opencv-python", "tqdm"]

[project.urls]
Homepage = "https://vikramrangarajan.github.io/SimpleTensor/"
Issues = "https://github.com/VikramRangarajan/SimpleTensor/issues"
Documentation = "https://vikramrangarajan.github.io/SimpleTensor/docs.html"
Repository = "https://github.com/VikramRangarajan/SimpleTensor"

[project.scripts]
simpletensor-train-mnist = "simpletensor.mnist_train:main"